PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.2
- Implemented FR #49253 (added support for libcurl's CERTINFO option).
  (Linus Nielsen Feltzing <linus@haxx.se>)


?? ??? 2009, PHP 5.3.1RC? <- WHY IS THIS HERE? Gonna be released after 5.3.1 or what??
- Upgraded bundled sqlite to version 3.6.18. (Ilia)
- Restored shebang line check to CGI sapi (not checked by scanner anymore).
  (Jani)

- Fixed certificate validation inside php_openssl_apply_verification_policy
  (Ryan Sleevi, Ilia)
- Fixed bug #49470 (FILTER_SANITIZE_EMAIL allows disallowed characters).
  (Ilia)


?? ??? 2009, PHP 5.3.1
- Upgraded bundled sqlite to version 3.6.17. (Scott)

- Added missing sanity checks around exif processing. (Ilia)
- Added error constant when json_encode() detects an invalid UTF-8 sequence.
  (Scott)

- Improved readlink on Windows, suppress \??\ and use the drive syntax only.
  (Pierre)
- Improved dns_get_record() AAAA support on windows. Always available when
  IPv6 is support is installed, format is now the same than on unix. (Pierre)
- Improved the DNS functions on OSX to use newer APIs, also use Bind 9 API
  where available on other platforms. (Scott)
- Improved shared extension loading on OSX to use the standard Unix dlopen()
  API. (Scott)

- Fixed sanity check for the color index in imagecolortransparent. (Pierre)
- Fixed scandir/readdir when used mounted points on Windows. (Pierre)
- Fixed zlib.deflate compress filter to actually accept level parameter. (Jani)
- Fixed leak on error in popen/exec (and related functions) on Windows.
  (Pierre)
- Fixed possible bad caching of symlinked directories in the realpath cache
  on Windows. (Pierre)
- Fixed atime and mtime in stat related functions on Windows. (Pierre)
- Fixed spl_autoload_unregister/spl_autoload_functions wrt. Closures and
  Functors. (Christian Seiler)